# blanczos

./: CMakeLists.txt  LICENSE  README.md
python/: blanczos.py  test.py
src/: blanczos.cpp  blanczos.h  csr.hpp  sparse.hpp
tests/: test1.cpp  test2.cpp  test3.cpp
